[metadata]
name = django-boot
version = 1.6.2
description = Django application with bootstrap-based styling.
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Silveira
author_email = gabrielsilveirapro@gmail.com
license = MIT
url=https://github.com/roderiano/django-boot

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 5.0